--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pipenv==11.8.3
+PyJWT==1.6.1
 virtualenv==15.1.0
 virtualenv-clone==0.3.0
 Werkzeug==0.14.1
