--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+bcrypt==3.1.4
 certifi==2018.1.18
+cffi==1.11.5
 click==6.7
 Flask==0.12.2
+Flask-Bcrypt==0.7.1
+Flask-JWT==0.3.2
+Flask-MySQLdb==0.2.0
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mysqlclient==1.3.12
 pipenv==11.8.3
+pycparser==2.18
 PyJWT==1.6.1
+PyMySQL==0.8.0
+six==1.11.0
 virtualenv==15.1.0
 virtualenv-clone==0.3.0
 Werkzeug==0.14.1
