--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,36 @@
 bcrypt==3.1.4
+beautifulsoup4==4.6.0
+bs4==0.0.1
 certifi==2018.1.18
 cffi==1.11.5
 click==6.7
+et-xmlfile==1.0.1
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-JWT==0.3.2
 Flask-MySQLdb==0.2.0
 gunicorn==19.7.1
+html5lib==1.0.1
 itsdangerous==0.24
+jdcal==1.4
 Jinja2==2.10
+lml==0.0.1
+lxml==4.2.1
 MarkupSafe==1.0
 mysqlclient==1.3.12
+numpy==1.14.2
+openpyxl==2.5.2
+pandas==0.22.0
 pipenv==11.8.3
 pycparser==2.18
 PyJWT==1.6.1
 PyMySQL==0.8.0
+python-dateutil==2.7.2
+pytz==2018.4
 six==1.11.0
+texttable==1.2.1
 virtualenv==15.1.0
 virtualenv-clone==0.3.0
+webencodings==0.5.1
 Werkzeug==0.14.1
 xlrd==1.1.0
